# VAEG

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  workspace.code-workspace
demo/: .gitignore  3DText.tscn  LICENSE  banks  main.gd  main.tscn  project.godot  run.sh
demo/Levels/Main/: L_Main.gd  L_Main.tscn  ReverbZone.gd  VAEOcclusion.gd
demo/Levels/Main/Materials/: M_Dark.tres
demo/Player/: Player.gd  Player.tscn
demo/addons/reloader/: main-control.gd  plugin.cfg  plugin.gd
demo/addons/test_plugin/: custom_audio_source.gd  custom_dock.tscn  plugin.cfg  test_plugin_entry.gd
demo/addons/vaeg/: Tree.tscn  custom_audio_source.gd  custom_dock.tscn  plugin.cfg  plugin.gd
demo/banks/bank1/: bank.json
demo/experiments/: EditorScripting.gd  TestTool.gd  ToolTest.tscn
demo/resources/: denied.wav.import  signal.wav.import
src/: gdexample.cpp  gdexample.h  gdlibrary.cpp  main.cpp  vaeg.cpp  vaeg.h  vaeg_emitter.hpp  vaeg_engine.hpp  vaeg_entry.cpp  vaeg_gdnative.hpp  vaeg_listener.hpp
